--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
 	"homepage": "https://github.com/lucasvdh/laravel-iban",
 	"authors": [{
 		"name": "Lucas van der Have",
-		"email": "lucas@rapide.nl",
-		"homepage": "http://rapide.nl/",
+		"email": "lucasvdhave@gmail.com",
+		"homepage": "http://lucasvdh.codes/",
 		"role": "Developer"
 	}],
 	"require": {
